--- a/css/styles.css
+++ b/css/styles.css
@@ -1,45 +1,41 @@
+/* Global styles */
+
+
 body{
-    font-family: "Open Sans", sans-serif;
+    font-family: "Open Sans", "sans-serif";
 }
 
-h1, h2, h3{
-    font-family: "Lobster", cursive;
+h1, h2, h3 {
+    font-family: "Lobster", "cursive";
 }
 
-h2{
+h2 {
     color: #3046C5;
 }
 
-header h2{
+header h2 {
     color: #CEC8FF;
 }
 
-.site-footer{
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
 
-.jumbotron{
+/* Page Order */
+
+
+.jumbotron {
+    margin: 0;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-    margin: 0;
+    color: white; 
 }
 
-.row-content{
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
-
-.navbar{
+.navbar {
     background-color: #901CAD;
 }
 
-.tab-content{
-    border: 1px solid #DDD;
-    border-top: none;
-    padding: 10px;
+.row-content {
+    padding: 50px 0;
+    border-bottom: 1px ridge lightgrey;
+    min-width: 200px;
 }
 
 .carousel-caption {
@@ -48,4 +44,9 @@ header h2{
 
 .carousel {
     border: solid #5637DD;
+}
+
+.site-footer {
+    background-image: linear-gradient(#CEC8FF, White);
+    padding: 20px 0;
 }
