--- a/css/styles.scss
+++ b/css/styles.scss
@@ -22,8 +22,10 @@ h2 {
     color: $color-primary;
 }
 
-header h2 {
-    color: $color-pale;
+header{
+    h2{
+        color: $color-pale;
+    }
 }
 
 .site-footer {
